# rileyseaburg_website

./: .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.ps1  k8s-service.yaml  package.json  posts.sql  rustyroad.toml  tailwind.config.js
.cargo/: config.toml
config/database/migrations/20230710230916_user/: up.sql
src/: main.rs
src/controllers/: datetime.rs  mod.rs  not_found.rs
src/controllers/database/: helpers.rs
src/controllers/user/: user.rs
src/controllers/video/: mod.rs  video.rs
src/models/: mod.rs  page.rs  post.rs  subscriber.rs  user.rs
src/routes/: blog.rs  dashboard.rs  index.rs  login.rs  mod.rs  newsletter.rs  not_found.rs  subscriber.rs
src/routes/pages/: pages.rs
src/routes/post/: post.rs
src/routes/webinar/: mod.rs  webinar.rs
src/templates/components/: camera.html.tera  navbar.html.tera
src/templates/pages/: 500.html.tera  login.html.tera  newsletter.html.tera  post.html.tera
src/templates/sections/: article.html.tera  webinar_studio.html.tera
static/css/: styles.css
static/js/: index.js  navbar.js
templates/: base.html.tera
templates/components/: navbar.html.tera  webinar_chat.html.tera
templates/layouts/: authenticated.html.tera  layout.html.tera
templates/layouts/authenticated/: blog.html.tera  dashboard.html.tera
templates/pages/: 401.html.tera  404.html.tera  500.html.tera  blog.html.tera  dashboard.html.tera  index.html.tera  newsletter.html.tera  post.html.tera  subscriber.html.tera
templates/pages/webinars/: id.webinar.html.tera  live.id.webinar.html.tera
templates/sections/: header.html.tera
(+16 files in other folders)
