[package]
name = "rileyseaburg_website"
version = "0.1.0"
authors = ["RustyRoad"]
edition = "2021"

[dependencies]
actix-web = { version = "4.3.1", features = ["openssl"] }
actix-files = "0.6.2"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
actix-service = "2.0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
random-string = "1.0.0"
env_logger = "0.10.0"
local-ip-address = "0.5.0"
futures = "0.3.23"
tera = "1.17.1"
reqwest = "0.11"
rustyroad = "0.1.8-beta"
rand = "0.8.5"
chrono = {version ="0.4.24", features = ["serde"]}
base64 = "0.21.0"
dotenv = "0.15.0"
bcrypt = "0.14.0"
pin-project-lite = "0.2.10"
actix-identity = "0.5.2"
openssl = "0.10.55"
log = "0.4.19"
markdown = "0.3.0"
strum = "0.25.0"
strum_macros = "0.25.1"
llm = "0.1.1"
rml_rtmp = "0.8.0"
mediasoup = "0.11.4"
uuid = {version = "1.4.1", features = ["v4"]}
[dependencies.sqlx]
features = ["postgres", "macros", "chrono", "json", "uuid", "offline"]
version = "0.6.2"
